--- a/markdown-to-html/index.html
+++ b/markdown-to-html/index.html
@@ -1,6 +1,6 @@
 <h1 id="raoni-gillet">Raoni Gillet</h1>
 <p><em>“Java is to JavaScript what car is to Carpet.” – Chris Heilmann</em></p>
-<p><img src="raoni_small.png" alt="Raoni Gillet"></p>
+<p><img src="markdown-to-html/raoni_small.png" alt="Raoni Gillet"></p>
 <h2 id="me-the-linux-fan">Me, the Linux fan</h2>
 <table>
 <thead>
