--- a/markdown-to-html/index.html
+++ b/markdown-to-html/index.html
@@ -118,7 +118,7 @@
 	</div>
 
 
-<h1 id="raoni-gillet">Raoni Gillet123 123</h1>
+<h1 id="raoni-gillet">Raoni Gillet</h1>
 <p><em>“Java is to JavaScript what car is to Carpet.” – Chris Heilmann</em></p>
 <p><img src="https://graonix.github.io/markdown-to-html/raoni_small.png" alt="Raoni Gillet"></p>
 <h2 id="me-the-linux-fan">Me, the Linux fan</h2>
