--- a/markdown-to-html/index.html
+++ b/markdown-to-html/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="https://graonix.github.io/markdown-to-html/style.css">
 </head>
-  <body>test
+  <body>
 	<div class="wrapper">
 		<div class="line line1">
 			<span class="circle circle-top"></span>
