--- a/markdown-to-html/index.html
+++ b/markdown-to-html/index.html
@@ -11,7 +11,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>R
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
@@ -21,7 +21,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>A
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
@@ -31,7 +31,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>O
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
@@ -41,7 +41,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>N
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
@@ -51,7 +51,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>I
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
