--- a/markdown-to-html/index.html
+++ b/markdown-to-html/index.html
@@ -61,7 +61,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>G
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
@@ -71,7 +71,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>I
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
@@ -81,7 +81,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>L
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
@@ -91,7 +91,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>L
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
@@ -101,7 +101,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>E
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
@@ -111,7 +111,7 @@
 				<span class="dot dot-top"></span>
 				<span class="dot dot-middle-top"></span>
 				<span class="dot dot-middle-bottom"></span>
-				<span class="dot dot-bottom"></span>
+				<span class="dot dot-bottom"></span>T
 			</div>
 			<span class="circle circle-bottom"></span>
 		</div>
