--- a/markdown-to-html/index.html
+++ b/markdown-to-html/index.html
@@ -118,7 +118,7 @@
 	</div>
 
 
-<h1 id="raoni-gillet">       Raoni Gillet</h1>
+<! ––<h1 id="raoni-gillet">       Raoni Gillet</h1>-->
 	  <br><br><br><br><br>
 <p><em>“Java is to JavaScript what car is to Carpet.” – Chris Heilmann</em></p>
 <p><img src="https://graonix.github.io/markdown-to-html/raoni_small.png" alt="Raoni Gillet"></p>
