--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "2; url = https://www.tutorialspoint.com" />
+      <meta http-equiv = "refresh" content = "2; url = https://graonix.github.io/markdown-to-html/" />
    </head>
    <body>
       <p>Hello HTML5!</p>
