--- a/markdown-to-html/index.html
+++ b/markdown-to-html/index.html
@@ -120,7 +120,7 @@
 
 
 	  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p><em>“Java is to JavaScript what car is to Carpet.” – Chris Heilmann</em></p>
+<p><em>“If the users don't control the program, the program controls the users. With proprietary software, there is always some entity, the "owner" of the program, that controls the program and through it, exercises power over its users. A nonfree program is a yoke, an instrument of unjust power.” – Richard Stallman</em></p>
 <p><img src="https://graonix.github.io/markdown-to-html/raoni_small.png" alt="Raoni Gillet"></p>
 <h2 id="me-the-linux-fan">Me, the Linux fan</h2>
 <table>
