--- a/markdown-to-html/index.html
+++ b/markdown-to-html/index.html
@@ -4,7 +4,10 @@
   <link rel="stylesheet" href="https://graonix.github.io/markdown-to-html/style.css">
 </head>
   <body>
-	    <div class="background"></div>
+	   <div class="container-fluid">
+<!-- Background animtion-->
+    <div class="background">
+	    
 	<div class="wrapper">
 		<div class="line line1">
 			<span class="circle circle-top"></span>
