--- a/markdown-to-html/index.html
+++ b/markdown-to-html/index.html
@@ -122,7 +122,7 @@
 
 
 	  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p><em>“Sharing knowledge is the most fundamental act of friendship. Because it is a way you can give something without loosing something.” – Richard Stallman</em></p>
+<p><em>“Sharing knowledge is the most fundamental act of friendship.<br>Because it is a way you can give something without loosing something.” – Richard Stallman</em></p>
 <p><img src="https://graonix.github.io/markdown-to-html/raoni_small.png" alt="Raoni Gillet"></p>
 <h2 id="me-the-linux-fan">Me, the Linux fan</h2>
 <table>
