--- a/404-page/index.html
+++ b/404-page/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="https://graonix.github.io/markdown-to-html/style.css">
+</head>
+  <body>
+
 <div class="noise"></div>
 <div class="overlay"></div>
 <div class="terminal">
@@ -6,3 +13,4 @@
   <p class="output">Please try to <a href="#1">go back</a> or <a href="#2">return to the homepage</a>.</p>
   <p class="output">Good luck.</p>
 </div>
+  </body>
