--- a/404-page/index.html
+++ b/404-page/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="https://graonix.github.io/markdown-to-html/style.css">
+  <link rel="stylesheet" href="https://graonix.github.io/page-404/style.css">
 </head>
   <body>
 
