--- a/404-page/index.html
+++ b/404-page/index.html
@@ -1,7 +1,7 @@
 <div class="noise"></div>
 <div class="overlay"></div>
 <div class="terminal">
-  <h1>Error <span class="errorcode">404</span></h1>
+  <h1><span class="errorcode">Error 404</span></h1>
   <p class="output">The page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
   <p class="output">Please try to <a href="https://graonix.github.io/markdown-to-html/">go back</a>
   <p class="output">Good luck.</p>
