--- a/404-page/index.html
+++ b/404-page/index.html
@@ -1,3 +1,12 @@
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Markdown convert to HTML</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
 <div class="noise"></div>
 <div class="overlay"></div>
 <div class="terminal">
