--- a/404-page/index.html
+++ b/404-page/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Markdown convert to HTML</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>404 page not found</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
 <div class="noise"></div>
